// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seo ssr test common meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <title data-meta-dynamic="true">common seo</title>
    <link rel="canonical" href="test-canonical" data-meta-dynamic="true" >
    <meta name="keywords" content="test,common,seo" data-meta-dynamic="true" >
    <meta name="robots" content="none" data-meta-dynamic="true" >
    <meta name="robots" content="noindex, nofollow" data-meta-dynamic="true" >
    <meta name="robots" content="noarchive" data-meta-dynamic="true" >
    <meta name="viewport" content="test seo" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    

    
    
    <style type="text/css"></style>
    <link data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test default meta pack 1`] = `
"
    <meta charset="UTF-8" >
    
    <title data-meta-dynamic="true">Tramvai</title>
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    

    
    <link data-critical="true"
      onload="__preloadJS()"
      rel="stylesheet"
      href="\${STATIC_URL}/dist/client/root.chunk.css"
    >
    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test json-ld meta 1`] = `
"
      {
        "@graph": [
          {
            "url": "https://www.tinkoff.ru/",
            "name": "Тинькофф Банк",
            "@type": "BankOrCreditUnion",
            "image": "https://static.tinkoff.ru/dist/portal-new/compiled/be23084191c7e7b4012da807d829ac04.png",
            "address": {
              "@type": "PostalAddress",
              "postalCode": "123060",
              "streetAddress": "1-й Волоколамский проезд, д.10, стр.1",
              "addressCountry": "Россия",
              "addressLocality": "Москва"
            },
            "@context": "http://schema.org/",
            "legalName": "АО «Тинькофф Банк»",
            "telephone": "+7 800 333-777-3",
            "priceRange": "0-7999",
            "description": "лицензия ЦБ РФ № 2673",
            "contactPoint": {
              "@type": "ContactPoint",
              "telephone": "+7 800 333-777-3",
              "areaServed": "Для звонков по России",
              "contactType": "customer service",
              "contactOption": "TollFree"
            }
          },
          {
            "url": "https://www.tinkoff.ru/",
            "name": "Тинькофф Банк",
            "@type": "Organization",
            "image": "https://static.tinkoff.ru/dist/portal-new/compiled/be23084191c7e7b4012da807d829ac04.png",
            "address": {
              "@type": "PostalAddress",
              "postalCode": "123060",
              "streetAddress": "1-й Волоколамский проезд, д.10, стр.1",
              "addressCountry": "Россия",
              "addressLocality": "Москва"
            },
            "@context": "http://schema.org/",
            "legalName": "АО «Тинькофф Банк»",
            "telephone": "+7 800 333-777-3",
            "description": "лицензия ЦБ РФ № 2673",
            "contactPoint": {
              "@type": "ContactPoint",
              "telephone": "+7 800 333-777-3",
              "areaServed": "Для звонков по России",
              "contactType": "customer service",
              "contactOption": "TollFree"
            },
            "aggregateRating": { "@type": "AggregateRating", "ratingValue": "5", "reviewCount": "439" }
          },
          {
            "name": "Кредитная карта «Тинькофф Платинум»",
            "@type": "Product",
            "image": {
              "url": "https://static2.tinkoff.ru/portal/mobile-home/img-platinum-char.png",
              "@type": "ImageObject"
            },
            "offers": {
              "@type": "AggregateOffer",
              "lowPrice": "590",
              "offeredBy": {
                "name": "Тинькофф Банк",
                "@type": "BankOrCreditUnion",
                "image": {
                  "url": "https://static.tinkoff.ru/dist/portal-new/compiled/c5e2e251a557ad1e3a5f120d5516d00d.png",
                  "@type": "ImageObject"
                },
                "address": {
                  "@type": "PostalAddress",
                  "postalCode": "123060",
                  "streetAddress": "1-й Волоколамский проезд, д.10, стр.1",
                  "addressCountry": "Россия",
                  "addressLocality": "Москва"
                },
                "telephone": "+7 800 555-777-8",
                "priceRange": "0-7999"
              },
              "priceCurrency": "RUB"
            },
            "@context": "http://schema.org",
            "description": "Кредитный лимит на карте до 300 000 рублей. Без процентов до 55 дней",
            "potentialAction": {
              "url": "https://www.tinkoff.ru/cards/credit-cards/tinkoff-platinum/#form",
              "name": "Оформить карту",
              "@type": "Action"
            }
          }
        ],
        "@context": "http://schema.org"
      }
    "
`;

exports[`seo ssr test og meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <title data-meta-dynamic="true">og seo</title>
    <meta property="og:description" content="og desc" data-meta-dynamic="true" >
    <meta property="og:image" content="og img" data-meta-dynamic="true" >
    <meta property="og:image:alt" content="alt og img" data-meta-dynamic="true" >
    <meta property="og:image:secure_url" content="seo imageSecure" data-meta-dynamic="true" >
    <meta property="og:image:height" content="seo 630" data-meta-dynamic="true" >
    <meta property="og:image:width" content="seo 1200" data-meta-dynamic="true" >
    <meta property="og:image:type" content="ggog" data-meta-dynamic="true" >
    <meta property="og:locale" content="locog" data-meta-dynamic="true" >
    <meta property="og:site_name" content="site og name" data-meta-dynamic="true" >
    <meta property="og:title" content="hello, og" data-meta-dynamic="true" >
    <meta property="og:type" content="og typ" data-meta-dynamic="true" >
    <meta property="og:url" content="http://og.og/" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    

    
    
    <style type="text/css"></style>
    <link data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test twitter meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <title data-meta-dynamic="true">twitter seo</title>
    <meta name="twitter:card" content="twitter card" data-meta-dynamic="true" >
    <meta name="twitter:creator" content="creat" data-meta-dynamic="true" >
    <meta name="twitter:image" content="img tw" data-meta-dynamic="true" >
    <meta name="twitter:image:alt" content="seo tw im al" data-meta-dynamic="true" >
    <meta name="twitter:site" content="seo @tinkoff_bank" data-meta-dynamic="true" >
    <meta name="twitter:title" content="hello, twitter" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    

    
    
    <style type="text/css"></style>
    <link data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;
